--- a/configs/icnet-sunrgbd.yaml
+++ b/configs/icnet-sunrgbd.yaml
@@ -14,7 +14,7 @@ train:
   specific_gpu_num: "1"     # for example: "0", "1" or "0, 1"
   train_batch_size: 16      # adjust according to gpu resources
   valid_batch_size: 16
-  data_path: "../sunrgbd/sunrgbd/"
+  data_path: "../data/sunrgbd/"
   epochs: 100
   log_iter: 10        # print log every log-iter 
   val_epoch: 1        # run validation every val-epoch
