--- a/configs/icnet-sunrgbd.yaml
+++ b/configs/icnet-sunrgbd.yaml
@@ -5,21 +5,23 @@ model:
 
 ### 2.Optimizer
 optimizer:
-  init_lr: 0.001
+  init_lr: 0.01
   momentum: 0.9
-  weight_decay: 0.0005
+  weight_decay: 0.001
 
 ### 3.Trainning 
 train:
   specific_gpu_num: "0"     # for example: "0", "1" or "0, 1"
-  train_batch_size: 16      # adjust according to gpu resources
-  valid_batch_size: 16
+  train_batch_size: 12      # adjust according to gpu resources
+  valid_batch_size: 12
   data_path: "../data/sunrgbd/"
-  epochs: 100
+  epochs: 150
   log_iter: 10        # print log every log-iter 
-  val_epoch: 1        # run validation every val-epoch
-  ckpt_dir: "./ckpt/" # ckpt and trainning log will be saved here
+  val_epoch: 3        # run validation every val-epoch
+  img_rows: 520
+  img_cols: 520
   resume:
+#  resume: 'runs/icnet-sunrgbd/46739/icnet_resnet50_150_0.270_best_model.pth'
 
 ### 4.Test
 test:
